--- a/index.html
+++ b/index.html
@@ -9,3 +9,12 @@
   <body>
   </body>
 </html>
+
+<header>
+    <div class="container">
+      <div class="header-title-area">
+        <h1 class="logo">Batty's coffee stand</h1>
+        <p class="text-sub">あなたに最高のコーヒーを提供します。</p>
+      </div>
+    </div>
+</header>
