--- a/index.html
+++ b/index.html
@@ -18,3 +18,17 @@
       </div>
     </div>
 </header>
+
+<div class="main">
+    <div class="container">
+      <div class="card-contents">
+        <h2 class="text-title">Information</h2>
+      </div>
+      <div class="card-contents">
+        <h2 class="text-title">Staff</h2>
+      </div>
+      <div class="card-contents">
+        <h2 class="text-title">Access</h2>
+      </div>
+    </div>
+  </div>
